--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#00643c",
   "icons": [
     {
-      "src": "https://i.imgur.com/p5RdyW1.png",
+      "src": "i.imgur.com/CE5FLw6.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://i.imgur.com/xADoVqv.png",
+      "src": "i.imgur.com/NGDpo6w.png",
       "sizes": "512x512",
       "type": "image/png"
     }
