--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
       "type": "image/png"
     },
     {
-      "src": "i.imgur.com/NGDpo6w.png",
+      "src": "final screen menora (1).png",
       "sizes": "512x512",
       "type": "image/png"
     }
