--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#00643c",
   "icons": [
     {
-      "src": "final icon menora (2).png",
+      "src": "final screen menora (1).png",
       "sizes": "192x192",
       "type": "image/png"
     },
