--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,26 @@
 {
   "name": "MENORA",
   "short_name": "MENORA",
-  "start_url": "https://www.menora.in",
-  "display": "fullscreen",
+  "description": "MENORA - Daily updated Bible-based insights, studies, and gospel resources.",
+  "start_url": "/",
+  "scope": "/",
+  "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#0080b3",
+  "theme_color": "#00643C",
+  "orientation": "any",
+  "lang": "en",
+  "categories": ["education", "religion", "books"],
+  "id": "menora",
   "icons": [
     {
-      "src": "final icon menora (2).png",
+      "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "final screen menora (1).png",
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "id": "menora",
-  "description": "MENORA/GOSPEL SOCIETY",
-  "lang": "en",
-  "orientation": "any",
-  "categories": ["education"]
+  ]
 }
