--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
   "id": "menora",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/icon-192-fixed.png",
       "sizes": "192x192",
       "type": "image/png"
     },
